--- a/app/views/msm_templates/directors.html.erb
+++ b/app/views/msm_templates/directors.html.erb
@@ -14,7 +14,7 @@
 
     <div class="caption">
       <a href="/directors/<%= the_d.id %>" class="btn btn-default btn-block">
-        Show Details
+        Show details
       </a>
 
       <a href="/directors/<%= the_d.id %>/edit_form" class="btn btn-default btn-block">
@@ -22,7 +22,7 @@
       </a>
 
       <a href="/delete_director/<%= the_d.id %>" class="btn btn-default btn-block">
-        Delete
+        Delete director
       </a>
     </div>
   </div>
