--- a/app/views/msm_templates/directors_new.html.erb
+++ b/app/views/msm_templates/directors_new.html.erb
@@ -3,7 +3,7 @@
 <form action="/directors/create">
   <div>
     <label for="image_url">
-      Image URL
+      Image url
     </label>
 
     <input id="image_url" type="text" name="image_url">
@@ -27,7 +27,7 @@
   
    <div>
     <label for="dob">
-      DOB
+      Dob
     </label>
 
     <input id="dob" type="text" name="dob">
@@ -35,6 +35,6 @@
   
   
   <button>
-    Create Photo
+    Create director
   </button>
 </form>
