--- a/app/views/msm_templates/directors.html.erb
+++ b/app/views/msm_templates/directors.html.erb
@@ -10,7 +10,8 @@
     
     <p>Name: <%= the_d.name %></p>  
     <p>DOB: <%= the_d.dob %></p>  
-    <p>Bio: <%= the_d.bio %></p>  
+    <p>Bio: <%= the_d.bio %></p> 
+    <p>Image url: <%= the_d.image_ %></p> 
 
     <div class="caption">
       <a href="/directors/<%= the_d.id %>" class="btn btn-default btn-block">
