--- a/app/views/msm_templates/directors_detail.html.erb
+++ b/app/views/msm_templates/directors_detail.html.erb
@@ -7,5 +7,10 @@
 <img src = <%= Director.find(@dir_id).image_url%> >  
 
 <p>Bio: <%= Director.find(@dir_id).bio %></p>  
+<p>Image url: <%= Director.find(@dir_id).image_url %></p> 
+
+<a href = "/delete_director/<%=@dir_id%>">Delete director</a>
+
+<a href = "/directors/<%=@dir_id%>/edit_form">Edit director</a>
 
 <a href = "/directors">Return to Directors Tab</a>
