--- a/app/views/msm_templates/directors_edit.html.erb
+++ b/app/views/msm_templates/directors_edit.html.erb
@@ -22,7 +22,7 @@
       Bio
     </label>
 
-    <input id="bio" type="text" name="bio" value ="<%= Director.find(@dir_id).bio %>">
+    <input id="bio" type="text" name="bio" value =<%= Director.find(@dir_id).bio %>>
   </div>
   
    <div>
