--- a/app/views/msm_templates/directors_edit.html.erb
+++ b/app/views/msm_templates/directors_edit.html.erb
@@ -22,8 +22,16 @@
       Bio
     </label>
 
-    <input id="bio" type="text" name="bio" value =<%= Director.find(@dir_id).bio %>>
+    <input id="bio" type="text" name="bio" value = "<%= Director.find(@dir_id).bio %>" style="width: 1000px; "  rows = "30">
   </div>
+  
+  <!--<div>-->
+  <!--  <label for="bio">-->
+  <!--    Bio-->
+  <!--  </label>-->
+
+  <!-- <textarea id="bio" name="bio" rows="30" placeholder="<%= Director.find(@dir_id).bio %>" style="width: 300px; "></textarea>-->
+  <!--</div>-->
   
    <div>
     <label for="dob">
@@ -38,3 +46,5 @@
     Update director
   </button>
 </form>
+
+<p>Bio: <%= Director.find(@dir_id).bio %></p>  
