movies first attempt

--- a/app/views/msm_templates/directors_new.html.erb
+++ b/app/views/msm_templates/directors_new.html.erb
@@ -2,10 +2,7 @@
 
 <form action="/directors/create">
   <div>
-    <label for="image_url">
-      Image url
-    </label>
-
+    <label for="image_url"> Image url </label>
     <input id="image_url" type="text" name="image_url">
   </div>
 
