--- a/app/views/msm_templates/movies_detail.html.erb
+++ b/app/views/msm_templates/movies_detail.html.erb
@@ -10,5 +10,5 @@
 <p>Description: <%=Movie.find(@m_id).description %> </p>
 <p>Image_url: <%=Movie.find(@m_id).image_url %> </p>
 
-<a href = "/movies//<%=the_movie.id %>/edit_form">Update movie</a>
+<a href = "/movies/<%==@m_id %>/edit_form">Edit movie</a>
 <a href = "/delete_movie/<%=@m_id %>">Delete movie</a>
