typos in edit and new

--- a/app/views/msm_templates/movies_detail.html.erb
+++ b/app/views/msm_templates/movies_detail.html.erb
@@ -6,6 +6,7 @@
         
 <img src = <%=Movie.find(@m_id).image_url %> >
 
+<p>Year: <%=Movie.find(@m_id).year %> </p>
 <p>Duration: <%=Movie.find(@m_id).duration %> </p>
 <p>Description: <%=Movie.find(@m_id).description %> </p>
 <p>Image_url: <%=Movie.find(@m_id).image_url %> </p>
