--- a/app/views/msm_templates/movies_new.html.erb
+++ b/app/views/msm_templates/movies_new.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div>
-        <label for = "Description"> Description </label>
+        <label for = "description"> Description </label>
         <input id = "description" type = "text" name = "description">
     </div>
 
