--- a/app/views/msm_templates/actors_edit.html.erb
+++ b/app/views/msm_templates/actors_edit.html.erb
@@ -7,7 +7,7 @@
     </div>
     
      <div>
-        <label for = "dob">DOB</label>
+        <label for = "dob">Dob</label>
         <input id = "dob" type = "text" name = "dob" value ="<%=Actor.find(@a_id).dob %>" >
     </div>
     
